src/test/deca/context/valid/oracle/type_boolean.deca
{
    boolean a;
    boolean b = true;
}