src/test/deca/context/invalid/oracle/use_var_not_decl_with_or_left.deca
{
    bool x;
    x = y || true;
}